--- a/result.html
+++ b/result.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+        <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your HTML File Title</title>
     
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     
