--- a/result.html
+++ b/result.html
@@ -3,9 +3,9 @@
 <head>
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your HTML File Title</title>
+    <title>result</title>
     
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+<!--     <meta http-equiv="content-type" content="text/html; charset=UTF-8" /> -->
     
         <script>
             L_NO_TOUCH = false;
